--- a/css/question.css
+++ b/css/question.css
@@ -80,7 +80,13 @@ h2 {
     width: 100%;
     height: 100%;
     object-fit: scale-down;
-    /* border: 0.3vw solid black; */
+    border-radius: 0.6vw;
+}
+
+.answer-image {
+    width: 100%;
+    height: 100%;
+    object-fit: scale-down;
     border-radius: 0.6vw;
 }
 
