--- a/css/lobby.css
+++ b/css/lobby.css
@@ -28,6 +28,60 @@ body {
     font-family: 'Mono';
 }
 
+.ip-container {
+    width: 40%;
+    height: 10%;
+    margin-left: 30%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: solid 0.3vw;
+    border-color: #261952 #261952 #261952 #261952;
+    border-radius: 0.6vw;
+    background-color: #5824a0;
+}
+
+h1 {
+    margin-top: 0.5vw;
+    margin-bottom: 0.5vw;
+    font-size: 4.5vw;
+    font-family: 'Naturaly';
+    color: white;
+    text-align: center;
+}
+
+.address-line {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+.ip-address {
+    width: 55%;
+    margin-top: 0;
+    margin-bottom: 0.5vw;
+    margin-left: 20%;
+    font-size: 3.2vw;
+    font-family: 'Naturaly';
+}
+
+.hide-button {
+    width: 6%;
+    height: 6%;
+    margin-top: 0vw;
+    margin-left: 7%;
+    margin-right: 12%;
+    margin-bottom: 0.5vw;
+    background-color: #2f105a;
+    border: solid 0.3vw;
+    border-color: #261952 #1d1240 #1d1240 #261952;
+    border-radius: 0.6vw;
+    cursor: pointer;
+}
+
 .player-list {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
