--- a/css/board.css
+++ b/css/board.css
@@ -9,7 +9,7 @@
 }
 
 body {
-    background: linear-gradient(180deg, #1b113d, #3713ab);
+    background: linear-gradient(180deg, #241652, #0b2f70);
     height: 100vh;
     overflow: hidden;
 }
@@ -97,12 +97,13 @@ body {
 
 .top-bar {
     display: flex;
+    height: 14vh;
     justify-content: center;
     align-items: center;
     gap: 3vw;
     padding: 0.8vw;
-    padding-top: 0.5vw;
-    padding-bottom: 0.5vw;
+    padding-top: 0.5vh;
+    padding-bottom: 1.5vh;
 }
 
 .player-card {
@@ -155,25 +156,59 @@ body {
     font-family: 'Mono Polz';
 }
 
+.board-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 78vh;
+    width: 98%;
+    margin-left: 1%;
+    gap: 0;
+}
+
+.sidebar-left {
+    width: 5%;
+    height: 100%;
+    background: linear-gradient(180deg, #2a1555, #4c2796, #2a1555);
+
+    border: solid #140c33;
+    border-width: 0.4vw;
+    border-radius: 1vw 0 0 1vw;
+}
+
 .board {
     border: solid #140c33;
-    border-width: 0.4vw 3.5vw 0.4vw 3.5vw;
-    border-radius: 1vw;
-    padding: 0.3vw;
+    border-width: 0.4vw 0 0.4vw 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-left: 1%;
     width: 90%;
+    height: 100%;
+    
+    background: radial-gradient(circle, #4474db, #1b113d);
+}
 
-    background-color: #180070;
+.sidebar-right {
+    width: 5%;
+    height: 100%;
+    background: linear-gradient(180deg, #2a1555, #4c2796, #2a1555);
+
+    border: solid #140c33;
+    border-width: 0.4vw;
+    border-radius: 0 1vw 1vw 0;
 }
 
 .categories {
     display: flex;
+    padding-top: 0.3vh;
+    padding-bottom: 0.7vh;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 1vw;
+    height: 12vh;
+    background: linear-gradient(180deg, #b18200, #dee200);
+
+    border-bottom: 0.3vh solid;
+    border-color: #000000;
 }
 
 .category {
@@ -186,11 +221,11 @@ body {
     padding: 0.7vw;
     padding-top: 0.2vw;
     border: 0.3vw solid;
-    border-color: #554299 #291C59 #291C59 #554299;
+    border-color: #000000;
     margin-left: 0.2vw;
     margin-right: 0.2vw;
     height: 5.5vw;
-    background: linear-gradient(180deg, #391975, #351a69);
+    background: linear-gradient(180deg, #d3d600, #998a00);
 
     text-shadow: 
         -0.1vw -0.1vw 0 #000000,  
@@ -203,22 +238,33 @@ body {
     display: flex;
     justify-content: space-around;
     width: 100%;
-    margin-bottom: 0.7vw;
+    height: 12.8vh;
+    margin-top: -0.2vh;
+    margin-bottom: 0.4vh;
+    border-collapse: collapse;
 }
 
 .question {
     flex: 1;
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 3.1vw;
     font-family: 'Mono Polz';
     color: #ffe600;
-    padding: 0.9vw;
-    border: 0.4vw solid;
-    border-color: #211168 #1b113d #1b113d #211168;
-    margin-left: 0.2vw;
-    margin-right: 0.2vw;
-    height: 4vw;
+    border-top-width: 0.2vh;
+    border-right-width: 0.2vw;
+    border-bottom-width: 0.2vh;
+    border-left-width: 0.2vw;
+    border-style: solid;
+    border-color: #000000;
+    height: 100%;
     cursor: pointer;
+
+    margin-right: -0.15vw;
+    /* margin-left: -0.1vw; */
+    margin-bottom: -0.4vh;
+
 
     text-shadow: 
         -2px -2px 0 #000,  2px -2px 0 #000,  0px  2px 0 #000,  2px 0px 0 #000,
@@ -227,6 +273,10 @@ body {
         0px -3px 0 #000, -3px 0px 0 #000, -3px  3px 0 #000,  3px  3px 0 #000;
 
     background: linear-gradient(130deg, #3c22b1, #352274);
+}
+
+.question.clicked {
+    visibility: hidden;
 }
 
 .next-board-window {
